examples/test/testpolicy15542.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15542
  namespace: namespace353
spec:
  podSelector:
    matchLabels:
      key38: value7
      key5: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value48
          key15: value25
      podSelector:
        matchLabels:
          key34: value32
          key46: value11
          key0: value9
